syntax = "proto3";

option csharp_namespace = "BlazorApp1.Shared.Protos";
package WriteT0DivisiPerusahaanPackage;

service svpWriteT0DivisiPerusahaan{
	rpc InsertT0DivisiPerusahaan (InsertT0DivisiPerusahaanRequest) returns (WriteDivisiPerusahaanReply);
	rpc UpdateT0DivisiPerusahaan (UpdateT0DivisiPerusahaanRequest) returns (WriteDivisiPerusahaanReply);
	rpc DeleteT0DivisiPerusahaan (DeleteT0DivisiPerusahaanRequest) returns (WriteDivisiPerusahaanReply);
}

message InsertT0DivisiPerusahaanRequest{
	string Divisi = 1;
	string Keterangan = 2;
}

message UpdateT0DivisiPerusahaanRequest{
	string IdDivisiPerusahaan = 1;
	string Divisi = 2;
	string Keterangan = 3;
}

message DeleteT0DivisiPerusahaanRequest{
	string IdDivisiPerusahaan = 1;
}

message WriteDivisiPerusahaanReply{
	bool IsOk = 1;
	string Hasil = 2;
}